2011-10-19  Albert Chu <chu11@llnl.gov>

	* Global cleanup, consistently and correctly check for errors when
	calling strtol, strtoul, strtod, etc.
	
2011-10-19  Albert Chu <chu11@llnl.gov>

	* ipmi-raw/src/ipmi-raw-argp.c: Fix error message.  Check raw byte
	inputs for correctness.
	
2011-10-19  Albert Chu <chu11@llnl.gov>

	* Document Intel S2600JF/Appro 512X IPMI bugs.
	
2011-10-18  Albert Chu <chu11@llnl.gov>

	* ipmi-raw/, ipmi-oem/: Fix allocation bug due to much larger
	_SC_ARG_MAX on RHEL6.  Assume max args appropriately for each
	tool.

	* ipmi-raw/, ipmi-oem/: Output error when excess arguments
	specified.
	
2011-10-17  Albert Chu <chu11@llnl.gov>

	* ipmi-sel/, libfreeipmi/src/sel-parse/: Fix the assumesystemevent
	workaround.
	
2011-10-17  Albert Chu <chu11@llnl.gov>

	* Support Intel Node Manager sensor/SEL events for Intel
	S2600JF/Appro 512X.
	
2011-10-17  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/util/ipmi-sensor-and-event-code-tables-util.c (get_management_subsystem_health_event_data2_message):
	Fix corner case output bug.
	
2011-10-17  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/sdr-cache/ipmi-sdr-cache-read.c (ipmi_sdr_cache_search_sensor),
	libfreeipmi/src/sdr-cache/ipmi-sdr-cache-defs.h: Fix corner case
	where invalid SDR record could be loaded if shared sensors are
	utilized on event only records.

2011-10-14  Albert Chu <chu11@llnl.gov>

	* etc/freeipmi.conf: Fix example/doc consistency.
	
2011-10-13  Albert Chu <chu11@llnl.gov>

	* ipmi-locate/src/ipmi-locate.h: Fix typo.

	* ipmi-locate/src/ipmi-locate-argp.c: Fix copyright year typo.

	* ipmi-locate/src/ipmi-locate_.h: Renamed from ipmi-locate.h.
	Done for code consistency to how ipmiconsole handles its
	ipmiconsole_.h.
	
2011-10-13  Albert Chu <chu11@llnl.gov>

	* Update copyright globally.
	
2011-10-06  Albert Chu <chu11@llnl.gov>

	* Document HP Itegrity rx3600 workaround.
	
2011-09-23  Albert Chu <chu11@llnl.gov>
