@@ -1749,6 +1749,12 @@ ipmi_cmd_raw (ipmi_ctx_t ctx,
       return (-1);
     }
 
+  if (!IPMI_NET_FN_RQ_VALID (net_fn))
+    {
+      API_SET_ERRNUM (ctx, IPMI_ERR_PARAMETERS);
+      return (-1);
+    }
+
   if (ctx->type == IPMI_DEVICE_UNKNOWN)
     {
       API_SET_ERRNUM (ctx, IPMI_ERR_DEVICE_NOT_OPEN);
@@ -1892,6 +1898,12 @@ ipmi_cmd_raw_ipmb (ipmi_ctx_t ctx,
       || !buf_rq_len
       || !buf_rs
       || !buf_rs_len)
+    {
+      API_SET_ERRNUM (ctx, IPMI_ERR_PARAMETERS);
+      return (-1);
+    }
+
+  if (!IPMI_NET_FN_RQ_VALID (net_fn))
     {
       API_SET_ERRNUM (ctx, IPMI_ERR_PARAMETERS);
       return (-1);
